<resources>
    <string name="app_name">bizsdk_sample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_default_family">My Home ..</string>
    <string name="deivce">Devices (%d devices, %d shared devices)</string>
    <string name="group">Group (%d groups, %d shared groups)</string>
    <string name="activator_biz">Device Config</string>
    <string name="scene_biz">Scene</string>
    <string name="family_biz">Family management</string>
    <string name="device_biz">Device management</string>
    <string name="ota_biz">Batch OTA</string>

    <!-- In-app language switching -->
    <string name="language_setting">Language</string>
    <string name="language_dialog_title">Select Language</string>
    <string name="language_en">English</string>
    <string name="language_zh">简体中文</string>
    <string name="language_system">Follow System</string>
</resources>