<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/current_family_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@mipmap/icon_arrow_drop_down"
            android:drawablePadding="@dimen/mg_10"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="family"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:paddingRight="16dp"
            android:text="Logout"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="@dimen/mg_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Weather:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
         <TextView
             android:id="@+id/tv_weather"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="@dimen/mg_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="City:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/tv_city"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activator"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/activator_biz"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/devicemanager"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/deivce"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/groupmanager"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/scene"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/scene_biz"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/family"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/family_biz"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/device"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/device_biz"
            android:textColor="@color/black" />

    </LinearLayout>


</LinearLayout>